# Project3290Group12

./: README.md  Untitled.ipynb  assign1.ipynb  assignment1.ipynb  numeric_features.ipynb  pyproject.toml  requirements.txt
