[tool.poetry]
name = "env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.3.2"
numpy = "^2.3.3"
ipykernel = "^6.30.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.6"
scikit-learn = "^1.7.2"
imbalanced-learn = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
